--- a/package.json
+++ b/package.json
@@ -9,12 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.29.0",
+    "axios": "^0.27.2",
+    "faunadb": "^4.5.4",
     "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "next-auth": "^4.3.4",
+    "react": "^17",
+    "react-dom": "^17",
+    "react-icons": "^4.3.1",
+    "sass": "^1.51.0",
+    "stripe": "^8.220.0"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
+    "@types/node": "^17.0.31",
+    "@types/react": "^18.0.8",
     "eslint": "8.14.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "typescript": "^4.6.4"
   }
 }
