--- a/package.json
+++ b/package.json
@@ -6,29 +6,39 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@prismicio/client": "5.1.1",
     "@stripe/stripe-js": "^1.29.0",
     "axios": "^0.27.2",
     "faunadb": "^4.5.4",
-    "next": "12.1.6",
+    "next": "^12.1.6",
     "next-auth": "^4.3.4",
     "prismic-dom": "^2.2.7",
-    "react": "^17",
-    "react-dom": "^17",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "sass": "^1.51.0",
     "stripe": "^8.220.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.13.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^17.0.31",
     "@types/prismic-dom": "^2.1.1",
-    "@types/react": "^18.0.8",
+    "@types/react": "^18.0.12",
+    "babel-jest": "^28.1.0",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.6",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^28.1.0",
+    "jest-dom": "^4.0.0",
+    "jest-environment-jsdom": "^28.1.0",
+    "jest-mock": "^28.1.0",
     "typescript": "^4.6.4"
   }
 }
